# fontnamer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/fontnamer/: fontnamer.py  utils.py
