[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fontnamer"
dynamic = ["version"]
authors = [{ name = "Matthew Lindsey", email = "mbl@null.net" }]
description = "Rename OpenType (.otf) and TrueType (.ttf) fonts using the fonttools library."
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["fonttools >= 4.0.0", "setuptools_scm >= 8"]

[project.scripts]
fontnamer = "fontnamer:main"

[project.urls]
"Homepage" = "https://github.com/matthewlindsey/fontnamer/"
"Bug Tracker" = "https://github.com/matthewlindsey/fontnamer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/fontnamer/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
